Added varied fixes and new Advisary maker page

--- a/styles.css
+++ b/styles.css
@@ -81,13 +81,15 @@ body{
   background-color: #b0b2b5;
   border: 1px solid #ccc;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 1 4px 8px rgba(0, 0, 0, 0.1);
   margin: 20px auto;
   overflow: hidden;
+  padding: 5px 0px 5px 0px;
 }
 
 .header{
   overflow: hidden;
+  background-image: linear-gradient(to left,rgba(255, 255, 255, 0.471),transparent ,transparent , rgba(0, 0, 0, 0.169));
   background-color: #bcceeb;
   text-align: center;
   display: flex;
@@ -110,6 +112,7 @@ body{
   align-items: center;
 }
 .card p {
+  
   user-select: none;
 }
 
@@ -153,7 +156,7 @@ body{
 }
 
 .card ul li:nth-child(odd) {
-  background-color: #afbbc7; /* Set background color for odd-numbered moves */
+  background-color: #b9babd; /* Set background color for odd-numbered moves */
 }
 
 .card ul li strong {
@@ -266,4 +269,8 @@ body{
 
 #minionCont tr:nth-child(odd) {
   background-color: #828282; /* Slightly different color for odd rows for zebra striping */
+}
+
+.input[type=text]{
+  border-radius: 15px;
 }
