--- a/styles.css
+++ b/styles.css
@@ -31,28 +31,47 @@ body{
 #gm-controls{
   background-color: #a5aab0;
   border-radius: 8px;
+  max-width: 16vw;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  height:40vh;
   text-align: center;
 }
+#loops{
+  background-color: #a5aab0;
+  width: 450px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+#loops table tr {
+  background-color: #f9f9f9; /* Light grey background */
+  color: #333; /* Darker text color for contrast */
+  border-bottom: 1px solid #ddd; /* A subtle bottom border for each row */
+}
+
+#loops table tr:nth-child(odd) {
+  background-color: #efefef; /* Slightly different color for odd rows for zebra striping */
+}
+
+#triggered-loop-row td{
+  border: 2px solid rgb(255, 0, 0);
+}
 .middlepane{
-  width: 40%;
-  min-width: 45vw;
+  min-width: 50vw;
   min-height: 650px;
   float: left;
   border-collapse: collapse;
   overflow-y: scroll;
-  height:99vh;
+  height:97vh;
 }
 .leftpane{
-    background-color: #ccc;
+  background-color: #b0b2b5;
     resize: both;
     width: 16vw;
     min-width: 350px;
     min-height: 400px;
     float: left;
     border-collapse: collapse;
-    height:99vh;
+    height:97vh;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -60,10 +79,11 @@ body{
 .rightpane{
    width: available;
    position: relative;
-   margin-left: 50%;
    overflow-y: scroll;
-   height:99vh;
+   margin-left: 50%;
+   height:97vh;
    border-collapse: collapse;
+   overflow: hidden;
 }
 
 .toppane{
@@ -87,7 +107,19 @@ body{
   padding: 5px 0px 5px 0px;
   box-shadow: 0 8px 6px -6px black;
 }
-
+.banner-header{
+  overflow: hidden;
+  background-image: linear-gradient(to left,rgba(255, 255, 255, 0.471),transparent ,transparent , rgba(0, 0, 0, 0.169));
+  background-color: #bcceeb;
+  text-align: center;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  min-height: 1vh;
+  max-height: 5vh;
+}
 .header{
   overflow: hidden;
   background-image: linear-gradient(to left,rgba(255, 255, 255, 0.471),transparent ,transparent , rgba(0, 0, 0, 0.169));
@@ -184,6 +216,7 @@ body{
 
 .button-text{
   background-color: #d1d1d1;
+  margin: 1px;
   border: #000000;
   border-radius: 9px;
   padding: 3px 8px;
@@ -208,17 +241,24 @@ body{
   text-align: center;
   font-size: 25px;
 }
+
+.fear-holder{
+  border-width: 1px;
+  background-color: #3f3f3f;
+  border: 2px  solid  #000000;
+  border-radius: 4px;
+  padding:3px;
+}
 .button-fear{
-  background-color: #765e5e;
-  border: #000000;
-  border-radius: 9px;
+  background-color: #8f6464;
+  border-radius: 2px;
   padding: 3px 8px;
   width: 18px;
   height:12px;
   user-select: none;
 }
 .button-fear-grayed{
-  background-color: #918e8e;
+  background-color: #dbd0d0;
 }
 .button-fear:hover{
   background-color: #c3a8a8;
