--- a/styles.css
+++ b/styles.css
@@ -300,10 +300,15 @@ textarea {
 .button-text:hover{
   background-color: #696969;
   color: white;
-  cursor: pointer;
+  cursor:pointer;
   box-shadow: 2px 2px #23c2a2c9;
+  transform: scale(1.05);
 }
-
+.button-text:active{
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  transform: scale(0.8);
+}
 .bubble-text{
   border-radius: 4px;
   padding: 1px 1px;
